--- a/src/components/styles/Card.css
+++ b/src/components/styles/Card.css
@@ -57,3 +57,24 @@
     color: #999999;
     margin: 0;
 }
+
+.card-button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 15px;
+    cursor: pointer;
+    font-size: medium;
+}
+
+.card-button-disabled {
+    background-color: #cccccc;
+    cursor: not-allowed;
+    color: black;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 15px;
+    cursor: pointer;
+    font-size: medium;
+}
